--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,3 @@
-runtime: php
+service: worker
+runtime: custom
 env: flex
-
-runtime_config:
-    document_root: "web"
-
-env_variables:
-    GCS_BUCKET_NAME: YOUR_BUCKET_NAME
